--- a/alpine-edge-ruby-2.6.5-grpc/Dockerfile
+++ b/alpine-edge-ruby-2.6.5-grpc/Dockerfile
@@ -8,4 +8,4 @@ RUN echo http://dl-cdn.alpinelinux.org/alpine/edge/testing >> /etc/apk/repositor
   && apk --no-cache add alpine-sdk coreutils
 RUN apk add --update --no-cache ruby=2.6.5-r2 ruby-dev ruby-etc ruby-irb ruby-rake \
     ruby-io-console ruby-bigdecimal ruby-json build-base mysql-dev zlib-dev \
-    libxml2-dev libxslt-dev tzdata libc6-compat grpc mysql-client gosu ruby-webrick \
+    libxml2-dev libxslt-dev tzdata libc6-compat grpc mysql-client gosu ruby-webrick
